# WineHua

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  build-linux.sh  build-profile.json5.example  build.sh  hvigorfile.ts  sign.py
.codex/skills/winehua-harmony-build/: SKILL.md
.codex/skills/winehua-harmony-build/agents/: openai.yaml
.codex/skills/winehua-harmony-build/references/: known-issues.md  workflow.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
HonWine/: .gitignore  build-linux.sh  build-profile.json5.example  sign-hap.sh  sign.py
HonWine/AppScope/resources/base/element/: string.json
HonWine/AppScope/resources/en/element/: string.json
HonWine/entry/src/main/cpp/: CMakeLists.txt  egl_renderer.cpp  egl_renderer.h  input_manager.cpp  input_manager.h  keymap_xkb.h  napi_init.cpp  plugin_manager.cpp  plugin_manager.h  seat.cpp  seat.h  wayland_server.cpp  wayland_server.h  xdg_shell.cpp
HonWine/entry/src/main/cpp/types/libentry/: Index.d.ts
HonWine/entry/src/main/ets/common/: KeyMap.ets  MouseMap.ets
HonWine/entry/src/main/ets/entryability/: EntryAbility.ets  WineWindowAbility.ets
HonWine/entry/src/main/ets/pages/: Index.ets  WineWindow.ets
HonWine/entry/src/main/ets/service/: WineWindowManager.ets
HonWine/entry/src/main/resources/base/element/: string.json
HonWine/entry/src/main/resources/base/profile/: main_pages.json
HonWine/entry/src/main/resources/en/element/: string.json
HonWine/entry/src/ohosTest/: module.json5
docs/: ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_LOG.md  CURRENT_STATUS.md  GRAPHICS_ROADMAP.md  INPUT_DESIGN.md  MSYS2_BUILD_SYSTEM.md  MULTITON_DESIGN.md  NOEXEC_MMAP_ANALYSIS.md  OHOS_MMAP_ANALYSIS.md  ONBOARDING.md  OPENGL_VIRGL_DESIGN.md  PHASE2_ARM64_RESEARCH.md  PLAN.md  README.md  REMOTE_HDC.md  SOURCE_MANAGEMENT.md  UNCERTAINTIES.md  WINE_MUSL_GLIBC_DIFF.md  arm64-native-wine-plan.md
entry/: build-profile.json5  hvigorfile.ts
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  audio_broker.cpp  audio_broker.h  audio_ipc_protocol.h  audio_ipc_server.cpp  audio_ipc_server.h  audio_stream.cpp  audio_stream.h  broker.cpp  broker.h  child_demo.cpp  egl_renderer.cpp  graphics_broker.cpp  graphics_broker.h  input_manager.cpp  input_manager.h  napi_init.cpp  plugin_manager.cpp  plugin_manager.h  ring_buffer.cpp  ring_buffer.h  seat.cpp  wayland_server.cpp  wayland_server.h  wine_child.cpp  wine_constants.h  wine_env.cpp  wine_env.h  wine_launch.cpp  wine_launch.h  wine_process.cpp  wine_process.h  xdg_shell.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: DesktopWindow.ets  Index.ets  WineWindow.ets
entry/src/main/ets/service/: WineWindowManager.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
patches/: 0001-ohos-Box64-compatibility-noexec-filesystem-support.patch
patches/box64/: 0001-ohos-HarmonyOS-musl-compatibility-patches-20-patches.patch
prebuilt/guest_gfx/: README.md
prebuilt/guest_gfx/x86_64/: BUILD_INFO.txt  winehua-guest-gfx.env
prebuilt/guest_gfx/x86_64/lib/: libGLESv1_CM.so.1  libGLESv2.so.2
scripts/: assemble.sh  bootstrap_msys2.ps1  build_all.sh  build_arm64_native.sh  build_box64.sh  build_deps.sh  build_freetype.sh  build_guest_gfx.sh  build_native.sh  build_ohos_guest_gfx.sh  build_wayland.sh  build_wine.sh  build_wine_ohos.sh  build_xkbcommon.sh  build_xkbconfig.sh  deveco_hvigor_env.js  ensure_hnp_signed_hap.ps1  env.sh  fetch_ohos_mesa.sh  fix_warnings.sh  inject_hnp_into_hap.ps1  minimal_wine.sh  package.sh  patches.sh  rebuild_harmony.ps1  rebuild_harmony.sh  wsl_exe_wrapper.sh  wsl_wayland_scanner_wrapper.sh
